# FoundationsOfAlgorithms

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
algorithms/: __init__.py  divideconquer.py  sorts.py
tests/: divideconquer.py  test_divideconquer.py
