[tool.poetry]
name = "foundationsofalgorithms"
version = "0.1.0"
description = ""
authors = ["Mahdihaghverdi Mahdihaghverdiliewpl@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
autoflake = "^2.0.1"
mypy = "^1.0.0"
pytest = "^7.2.1"
pre-commit = "^3.0.4"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
